# mandelbrot-plotter

./: CMakeLists.txt  README.md
media/: makeVideo.sh
src/: Mandel.hpp  main.cpp  render.cpp
